test/ibgp/ibgp-raw.out

CIDR           IP Block            b16           NHI                 
--             0.0.0.0/26          0x00000000    
0              0.0.0.24/29         0x00000018    1
0/0            0.0.0.24/30         0x00000018    
1              0.0.0.0/28          0x00000000    2
1/0            0.0.0.8/30          0x00000008    2:1(1) 2:2(1) 
1/1            0.0.0.4/30          0x00000004    
1/2            0.0.0.0/30          0x00000000    
2              0.0.0.16/29         0x00000010    3
2/0            0.0.0.16/30         0x00000010    
3              0.0.0.36/30         0x00000024    1:1(1) 2:1(2) 
4              0.0.0.32/30         0x00000020    2:2(2) 3:1(1) 

NHI Addr            CIDR Level          IP Address Block    % util    
--                  --                  0.0.0.0/26          65.625    
1                   0                   0.0.0.24/29         75.0      
2                   1                   0.0.0.0/28          87.5      
3                   2                   0.0.0.16/29         75.0      

** 		 Using specified 1.0ns clock resolution


--- Phase I: construct table of routers and hosts


--- Phase II: connect Point-To-Point links


--- Phase III: add static routes
## Net config: 4 routers and hosts
## Elapsed time: 0.536 seconds
** Running for 100000000000 clock ticks (== 100.0 seconds sim time)
----------------------------------------------------------------------
|	Raceway SSF 1.0b09 (2 May 2001)
|	 Proprietary Internal Development Release
|	(c)2000,2001 Renesys Corporation
----------------------------------------------------------------------

~#
~# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~# IBGP Validation Test: success if 1 internal and 2 external msgs rcvd
~# = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
~#
~# AS Z: received external update message from AS Y
~# AS Y, router 2: received internal update
~# AS Z: received external update message from AS Y
~#             *** TEST SUCCESSFUL ***
~#
----------------------------------------------------------------------
| 1 timelines, 5 barriers, 927 events, 563 ms, 3 Kevt/s
----------------------------------------------------------------------
